frontend/service.yaml
apiVersion: v1 
kind: Service
metadata: 
  name: frontend
  namespace: expense
spec:
  selector:
    project: expense
    app: frontend
    tier: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
